--- a/app/src/main/res/layout/activity_forth.xml
+++ b/app/src/main/res/layout/activity_forth.xml
@@ -34,8 +34,9 @@
         android:src="@drawable/splash_logo" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/button_background"
         android:orientation="horizontal">
 
         <ImageView
@@ -44,61 +45,75 @@
             android:src="@drawable/ic_user" />
 
         <EditText
-            android:layout_width="384dp"
+            android:layout_width="371dp"
             android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:hint="请输入账号"/>
-
+            android:hint="请输入账号"
+            android:maxLines="1" />
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/button_background"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_password"/>
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_password" />
+
         <EditText
-            android:layout_width="384dp"
+            android:layout_width="371dp"
             android:layout_height="wrap_content"
             android:hint="请输入密码"
-            android:inputType="textPassword"
-            />
+            android:inputType="textPassword" />
 
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/button_background"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_password"/>
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_password" />
+
         <EditText
-            android:layout_width="384dp"
+            android:layout_width="371dp"
             android:layout_height="wrap_content"
             android:hint="再次输入密码"
-            android:inputType="textPassword"
-            />
+            android:inputType="textPassword" />
 
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/button_sign_up"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="注册"/>
-
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button_sign_up"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="注册" />
 
 </LinearLayout>
