--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="53dp" />
@@ -85,8 +86,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:backgroundTint="#00000000"
-        android:textColor="@color/black"
-        android:text="没有账号？立即注册" />
+        android:text="没有账号？立即注册"
+        android:textColor="@color/black" />
 
     <LinearLayout
         android:layout_width="wrap_content"
