--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -35,7 +35,7 @@
             android:src="@drawable/ic_user" />
 
         <EditText
-            android:id="@+id/edit1"
+            android:id="@+id/edit_account"
             android:layout_width="371dp"
             android:layout_height="wrap_content"
             android:hint="请输入账号"
@@ -59,29 +59,29 @@
             android:src="@drawable/ic_password" />
 
         <EditText
-            android:id="@+id/edit2"
+            android:id="@+id/edit_password"
             android:layout_width="371dp"
             android:layout_height="wrap_content"
             android:hint="请输入密码"
             android:inputType="textPassword" />
     </LinearLayout>
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/radiobutton1"
         android:layout_width="wrap_content"
         android:layout_height="37dp"
         android:layout_gravity="end"
-        android:text="同意用户协议" />
+        android:text="记住密码" />
 
     <Button
-        android:id="@+id/button_4"
+        android:id="@+id/sigh_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:text="登录" />
 
     <Button
-        android:id="@+id/button_2"
+        android:id="@+id/sigh_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
