--- a/app/src/main/res/layout/activity_forth.xml
+++ b/app/src/main/res/layout/activity_forth.xml
@@ -100,15 +100,12 @@
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="10dp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </LinearLayout>
+    <CheckBox
+        android:id="@+id/radiobutton1"
+        android:layout_width="wrap_content"
+        android:layout_height="37dp"
+        android:layout_gravity="end"
+        android:text="同意用户协议" />
 
     <Button
         android:id="@+id/button_sign_up"
