--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -67,7 +67,7 @@
     </LinearLayout>
 
     <CheckBox
-        android:id="@+id/radiobutton1"
+        android:id="@+id/remember_pass"
         android:layout_width="wrap_content"
         android:layout_height="37dp"
         android:layout_gravity="end"
