--- a/app/src/main/res/layout/activity_forth.xml
+++ b/app/src/main/res/layout/activity_forth.xml
@@ -111,7 +111,7 @@
         android:text="同意用户协议" />
 
     <Button
-        android:id="@+id/button_sign_up"
+        android:id="@+id/sign_up"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="注册" />
