--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -89,6 +89,13 @@
         android:text="没有账号？立即注册"
         android:textColor="@color/black" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="220dp"
+        android:text="其它方式登录" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
