--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -93,54 +93,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="180dp"
         android:text="其它方式登录" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        android:orientation="horizontal">
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/sina"
+            android:layout_width="124dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginLeft="50dp"
+            android:drawableTop="@drawable/account_sina"
+            android:gravity="center"
+            android:text="新浪微博登录" />
 
-            <ImageButton
-                android:id="@+id/imagebutton_sina"
-                android:layout_width="194dp"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:src="@drawable/account_sina" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:text="新浪微博登录" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tencent"
+            android:layout_width="127dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageButton
-                android:id="@+id/imagebutton_tencent"
-                android:layout_width="219dp"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:src="@drawable/account_tencent" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:text="    腾讯微博登录" />
-        </LinearLayout>
-
+            android:layout_marginLeft="50dp"
+            android:drawableTop="@drawable/account_tencent"
+            android:gravity="center"
+            android:text="    腾讯微博登录" />
 
     </LinearLayout>
 
