--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -3,11 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#CFC7C7"
     android:orientation="vertical">
 
 
     <TextView
         android:layout_width="match_parent"
+        android:layout_marginTop="30dp"
         android:layout_height="53dp" />
 
     <TextView
@@ -105,7 +107,7 @@
 
         <TextView
             android:id="@+id/sina"
-            android:layout_width="124dp"
+            android:layout_width="102dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:drawableTop="@drawable/account_sina"
@@ -114,7 +116,7 @@
 
         <TextView
             android:id="@+id/tencent"
-            android:layout_width="127dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:drawableTop="@drawable/account_tencent"
