--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -5,6 +5,11 @@
     android:layout_gravity="bottom"
     android:orientation="vertical">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
+        android:layout_width="match_parent"
+        android:layout_height="115dp" />
+
     <Button
         android:id="@+id/button_3"
         android:layout_width="match_parent"
