--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -9,26 +9,29 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_marginTop="30dp"
-        android:layout_height="53dp" />
+        android:layout_height="53dp"
+        android:layout_marginTop="30dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="276dp"
         android:layout_height="74dp"
-        android:text="登录"
-        android:textColor="@android:color/background_dark"
+        android:layout_gravity="center"
+        android:text="Welcome"
+        android:textColor="@color/purple_200"
         android:textSize="60dp" />
 
     <TextView
         android:layout_width="262dp"
         android:layout_height="33dp"
-        android:text="您好，欢迎来到知乎日报!"
+        android:layout_gravity="center"
+        android:text="您好，请登录!"
         android:textSize="22dp" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="306dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_background"
+        android:layout_gravity="center"
+        android:background="@drawable/view_background"
         android:orientation="horizontal">
 
         <ImageView
@@ -38,7 +41,7 @@
 
         <EditText
             android:id="@+id/edit_account"
-            android:layout_width="371dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:hint="请输入账号"
             android:maxLines="1" />
@@ -50,9 +53,10 @@
         android:layout_height="8dp" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="306dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_background"
+        android:layout_gravity="center"
+        android:background="@drawable/view_background"
         android:orientation="horizontal">
 
         <ImageView
@@ -62,7 +66,7 @@
 
         <EditText
             android:id="@+id/edit_password"
-            android:layout_width="371dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:hint="请输入密码"
             android:inputType="textPassword" />
@@ -70,16 +74,17 @@
 
     <CheckBox
         android:id="@+id/remember_pass"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="37dp"
         android:layout_gravity="end"
         android:text="记住密码" />
 
     <Button
         android:id="@+id/sigh_in"
-        android:layout_width="match_parent"
+        android:layout_width="168dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
+        android:layout_gravity="center"
+        android:backgroundTint="#9C27B0"
         android:text="登录" />
 
     <Button
@@ -87,9 +92,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:backgroundTint="#00000000"
+        android:backgroundTint="#80BA3D"
         android:text="没有账号？立即注册"
-        android:textColor="@color/black" />
+        android:textColor="@color/purple_500" />
 
     <TextView
         android:layout_width="wrap_content"
