--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,11 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="UTF-8"?>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <!-- 圆角的度数-->
+            <corners android:radius="25dp" />
+            <!-- 设置按钮中的文字与边框的距离-->
+            <padding android:bottom="10dp" android:left="20dp" android:right="20dp" android:top="10dp" />
+            <!-- 背景色-->
+            <solid android:color="#9C27B0" />
+            <!-- 边框色-->
+            <stroke android:width="1dp" android:color="#000000" />
+        </shape>
+        >
+    </item>
+    <item>
+        <shape android:layout_width="match_parent" android:layout_height="match_parent" android:shape="rectangle">
+            <corners android:radius="20dp" />
+            <solid android:color="#9C27B0" />
+            <stroke android:width="1dp" android:color="#E89C17" />
+        </shape>
+    </item>
 
-    <solid android:color="#00000000" />
-
-    <corners android:radius="50dip" />
-
-    <stroke
-        android:width="2px"
-        android:color="#911EB1" />
-</shape>
+</selector>
