--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -8,7 +8,7 @@
     <Button
         android:id="@+id/button_1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="634dp"
         android:layout_marginTop="30dp"
         android:text="Start the Test"
 
